# fastapi-firestore-mongodb-compat-api

./: .env.example  README.md  pyproject.toml
app/: config.py  main.py
app/database/: db.py
app/models/: user.py
app/routes/: user_route.py
app/utils/: security.py
